# webServerFromScratch

./: .gitignore  AsyncHTTPServer.cpp  CMakeLists.txt  LICENSE  README.md  TO_DO.md  ThreadedHTTPServer.cpp  a.out  client  client.cpp  httpservers.h  mime_types.h  server  serverEPoll.cpp  serverTPC.cpp  serverTpool.cpp  showip  showip.cpp  stock_response.h  threadpool.h
benchmark/: bench  bench.cpp  perf.data  perf.data.old
httpserver/: AsyncHTTPServer.cpp  ThreadedHTTPServer.cpp  header.h  httpservers.h  mime_types.h  router.h  server  stock_response.h  test  threadpool.h
httpserver/html/: index.html
include/httpserver/: AsyncHTTPServer.cpp  ThreadedHTTPServer.cpp  error_codes.h  header.h  http_parser.h  httpservers.h  mime_types.h  router.h  serverTPC.cpp  stock_response.h  threaded_server.h  threadpool.h
include/httpserver/html/: index.html
include/httpserver/html/stock_resps/: forbidden.html  serverError.html
stock_resps/: notFound.html
tests/: CMakeLists.txt  client.cpp  contentLengthTests.cpp  fixtures.h  request.txt  serve_connection.cpp  tests.cpp  transferChunkedTests.cpp
